k8s/deployment.yaml
### This file is used to automatically deploy the application to the development environment.
apiVersion: v1
kind: Service
metadata:
  name: aksa-backend-PR_NUMBER
spec:
  selector:
    app: aksa-PR_NUMBER
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aksa-deployment-PR_NUMBER
  labels:
    app: aksa-PR_NUMBER
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aksa-PR_NUMBER
  template:
    metadata:
      labels:
        app: aksa-PR_NUMBER
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: aksa
          securityContext:
            allowPrivilegeEscalation: false
          image: registry.aksa.local/aksa/aksa-server
          args:
            - "-disable-check-origin"
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: aksa-frontend-PR_NUMBER
spec:
  selector:
    app: frontend-PR_NUMBER
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-PR_NUMBER
  labels:
    app: frontend-PR_NUMBER
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-PR_NUMBER
  template:
    metadata:
      labels:
        app: frontend-PR_NUMBER
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frontend
          securityContext:
            allowPrivilegeEscalation: false
          image: registry.aksa.local/aksa/aksa-frontend
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: aksa-landing-page-PR_NUMBER
spec:
  selector:
    app: landing-page-PR_NUMBER
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-PR_NUMBER
  labels:
    app: landing-page-PR_NUMBER
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page-PR_NUMBER
  template:
    metadata:
      labels:
        app: landing-page-PR_NUMBER
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: landing-page
          securityContext:
            allowPrivilegeEscalation: false
          image: registry.aksa.local/aksa/landing-page:latest
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
          ports:
            - containerPort: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: aksa-ingressroute-PR_NUMBER
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.dev.aksa.fra.ics.kazanci.io.
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`PR_NUMBER.development.aksa.fra.ics.kazanci.io`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: aksa-backend-PR_NUMBER
          port: 8080
    - match: Host(`PR_NUMBER.development.aksa.fra.ics.kazanci.io`) && (PathPrefix(`/static`) || PathPrefix(`/locales`) || PathPrefix(`/login`) || PathPrefix(`/board`) || PathPrefix(`/new`)  || PathPrefix(`/timer_finished.mp3`) || PathPrefix(`/hotkeys.pdf`) || PathPrefix(`/emoji-data/`))
      kind: Rule
      services:
        - name: aksa-frontend-PR_NUMBER
          port: 80
    - match: Host(`PR_NUMBER.development.aksa.fra.ics.kazanci.io`)
      kind: Rule
      services:
        - name: aksa-landing-page-PR_NUMBER
          port: 80

  tls:
    secretName: aksa-development-certificate-PR_NUMBER
